discussion/kv_engine/176659/176659_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Wait for memory to reduce before setting new quota

Change-Id: I0d707b894fa6b7218340c3a86fa93e8f61a80a7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-29 16:52:07.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-29 17:02:31.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19520/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19520/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20646/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20646/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21287/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21287/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28679/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8188/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8188/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20300/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20300/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17567/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/bucket_quota_change_task.cc b/engines/ep/src/bucket_quota_change_task.cc
index c1c9c7757..37fb06eb7 100644
--- a/engines/ep/src/bucket_quota_change_task.cc
+++ b/engines/ep/src/bucket_quota_change_task.cc
@@ -56,16 +56,16 @@ bool BucketQuotaChangeTask::run() {
         if (!setNewQuotaIfMemoryUsageAcceptable(desiredQuota)) {
             state = ChangeState::WaitingForMemoryReclamation;
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
             EP_LOG_CRITICAL_RAW(&quot;starting to wait&quot;);
         }
         break;
     case ChangeState::WaitingForMemoryReclamation:
         if (!setNewQuotaIfMemoryUsageAcceptable(desiredQuota)) {
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
             EP_LOG_CRITICAL_RAW(&quot;waiting&quot;);
         }
         break;
diff --git a/engines/ep/src/bucket_quota_change_task.h b/engines/ep/src/bucket_quota_change_task.h
index 5e567d46c..02d6280ef 100644
--- a/engines/ep/src/bucket_quota_change_task.h
+++ b/engines/ep/src/bucket_quota_change_task.h
@@ -64,7 +64,6 @@ protected:
     void setDesiredQuota(size_t desiredQuota);
     bool checkMemoryState();
 
-
     bool setNewQuotaIfMemoryUsageAcceptable(size_t desiredQuota);
 
     /**
diff --git a/engines/ep/tests/module_tests/bucket_quota_change_test.cc b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
index 190783559..88454438d 100644
--- a/engines/ep/tests/module_tests/bucket_quota_change_test.cc
+++ b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
@@ -327,7 +327,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
     flushVBucketToDiskIfPersistent(vbid, 1);
 
     // Poke the item and the pager setting to ensure that we will evict it
-    store-&gt;getVBucket(vbid)-&gt;ht.findOnlyCommitted(key)
+    store-&gt;getVBucket(vbid)
+            -&gt;ht.findOnlyCommitted(key)
             .storedValue-&gt;setFreqCounterValue(0);
     engine-&gt;getConfiguration().setItemEvictionAgePercentage(0);
     engine-&gt;getConfiguration().setItemEvictionFreqCounterAgeThreshold(255);
@@ -365,8 +366,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
 
     if (STParameterizedBucketTest::isMagma()) {
         // Allow magma 10 seconds to reduce memory.
-        auto timeout = std::chrono::steady_clock::now() +
-                std::chrono::seconds(10);
+        auto timeout =
+                std::chrono::steady_clock::now() + std::chrono::seconds(10);
         while (engine-&gt;getEpStats().getMaxDataSize() != newQuota) {
             if (timeout &lt; std::chrono::steady_clock::now()) {
                 // We waited too long for magma to reduce memory usage. Either

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17567/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18416/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18416/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18416/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39632/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39632/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8089/ : FAILURE

Compile error at [2022-06-29T17:00:22.222Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8089/ )
----------------------------------------------------------------------------------------------------------------------
